--- a/1.tex
+++ b/1.tex
@@ -932,132 +932,566 @@ $$\Lim_{x\to \infty}\left(1+\frac{1}{x}\right)^{x}=e$$
 \end{enumerate}
 \end{ex}
 
+\section{函数的连续性}
+\subsection{连续函数的概念}
+
+在第四册下，我们用数列的语言规定了函数$f$在点$a$连续的意义．现在用$\varepsilon-\delta$语言来描述函数$f$在其定义域中的点$a$是连续的含义：
+
+\begin{blk}
+   {定义1} 函数$f$在其定义域M中的点$a$是连续的，如果对于每一个正数$\varepsilon$, 有$a$的一个$\delta$邻域$(a-\delta,a+\delta)$, 使得对于定义域中满足$|x-a|<\delta$的一切$x$值，不等式
+\[|f (x) -f(a)|<\varepsilon\]
+成立。 
+\end{blk}
+
+\begin{rmk}
+在函数极限定义那里不要求$f(a)$存在，所以特别注意要$x\ne a$, 现在，在函数于某点$a$连续的定义中，只盼$\Lim_{x\to a} f(x)=f(a)$, 因此，保证$|f(x)-f(a)|<\varepsilon$
+成立的充分条件$|x-a|<\delta$不再要求$x\ne a$了。
+\end{rmk}
+
+对于一个在点$a$处连续的函数，有
+\[\lim_{x\to a}f (x) =f \left(\lim_{x\to a} x\right) =f (a)\]  
+极限符号同函数符号可以改变次序或者说可以互换。
+
+\begin{blk}
+ {定义2 }如果函数$f(x)$在一个区间$(a,b)$的每一点都连续，我们就说，它在这个区间$(a,b)$上连续。   
+\end{blk}
+
+函数也可以只在一点的一侧连续，当
+\[\lim_{x\to x_0^+} f (x) =f (x_0)\]
+时，便说$f(x)$在$x_0$的右侧连续；当
+\[\lim_{x\to x_0^-} f (x) =f (x_0)\]
+时，便说$f(x)$在$x_0$的左侧连续。显然，在一点的两侧都连续时，必在这点上连续。
+
+所谓函数$f(x)$在闭区间$[a,b]$上连续，除了它在$(a,b)$内每一点都连续外，在$a$点右侧连续，在$b$点左侧连续。
+
+在一般自然现象中连续是常态，不连续则是在特殊情形的突变。例如，在火箭的发射过程中，随着火箭的燃烧，质量逐渐变化，当每一级火箭烧尽时，该级火箭的壳自行脱落，于是质量突然减小，质量变化如图1.11所示。所以，常用的函数一般只有几个特别的点是不连续的：如果$f(x)$在$x=a$处不是连续的，则称$a$为函数的间断点。对于左右极限存在的间断点叫\textbf{第一类间断点}，不属于第一类间断点的叫\textbf{第二类间断点}。
+
+例如$y=[x]$在所有的整数点$n$有第一类间断点；$y=\tan x$在$x=\pi/2$有第二类间断点。
+
+\begin{figure}[htp]
+    \centering
+    \begin{minipage}[t]{0.48\textwidth}
+    \centering
+    \begin{tikzpicture}[>=latex, scale=1]
+        \draw[->](-.5,0)--(4,0)node[right]{$t$时间};
+        \draw[->](0,-.5)--(0,4)node[right]{$M$质量};
+    \draw[thick](0,3.5)--(2,2.5);
+    \draw[thick](2,1.5)--(4,.5);
+    \draw[dashed](2,2.5)--(2,0)node[below]{$t_0$};
+    \draw(2,2.5)[fill=white] circle (2pt);
+    \node at (0,0)[below right]{$O$};
+    \end{tikzpicture}
+    \caption{}
+    \end{minipage}
+    \begin{minipage}[t]{0.48\textwidth}
+    \centering
+    \begin{tikzpicture}[>=latex, scale=1.8]
+        \draw[->](-.5,0)--(2.5,0)node[right]{$x$};
+    \draw[->](0,-.5)--(0,2)node[right]{$y$};
+    \draw[thick](0,0)node[below left]{$O$}--(1,1)--(2,0)node[below]{2};
+    \draw[dashed](1,0)node[below]{1}--(1,1);
+    \draw(0,1)node[left]{1}--(.05,1);
+    \end{tikzpicture}
+    \caption{}
+    \end{minipage}
+    \end{figure}
 
 \begin{example}
-    
+    设函数
+$f (x) =\begin{cases}
+     x,& 0\le x\le 1 \\ 2-x,& 1\le x\le 2\\
+\end{cases}$
+
+问在$x=1$处是否连续？
 \end{example}
 
+\begin{solution}
+  在$x=1$处的两侧，函数的对应规则由不同的式子表示，所以研究在$x=1$处函数是否连续，就需要从左右极限入手（图1.12）。
+\[  \lim_{x\to 1^-} f (x) =\lim_{x\to 1^-} x=1,\qquad  \lim_{x\to 1^+} f (x) =\lim_{x\to 1^+} (2-x)=1\]
+$\therefore\quad \Lim_{x\to 1}f(x)=1$
+
+又$f(1)=1$, 故有$\Lim_{x\to 1}f(x)=f(1)$, 即$f(x)$在$x=1$处是连续的。
+\end{solution}
+
+\begin{example}
+    函数$f(x)=x\sin\frac{1}{x}$在$x=0$处是否连续？如不连续，是第几类间断点？
+\end{example}
 
 \begin{solution}
-    
+    函数$f$只在$x=0$没有定义，故$f$在$x=0$处间断，它的定义域是$\mathbb{R}-\{0\}$.
+
+因为$\left|\sin\frac{1}{x}\right|\le 1$，从而：    
+\[\begin{split}
+   & 0<\left|x\sin\frac{1}{x}\right|\le |x|\\
+&0\le \lim_{x\to 0}\left|x\sin\frac{1}{x}\right|\le \lim_{x\to 0}|x|=0\\
+&\lim_{x\to 0}x\sin\frac{1}{x}=0
+\end{split}\]
+所以，$f$在$x=0$处左、右极限存在，这就是说$x=0$是第一类间断点，它的图象大致如图1.13所示．
+
+\begin{figure}[htp]
+    \centering
+\begin{tikzpicture}[>=latex, scale=1.5]
+\draw[->](-1.75,0)--(1.75,0)node[right]{$x$};
+\draw[->](0,-1.75)--(0,1.75)node[right]{$y$};
+\draw(-1.5,-1.5)--(1.5,1.5)node[right]{$y=x$};
+\draw(-1.5,1.5)node[left]{$y=-x$}--(1.5,-1.5);
+\draw[domain=0.08:1.5, samples=1000, thick]plot(\x, {\x*sin(1/\x r)});
+\draw[domain=0.08:1.5, samples=1000, thick]plot(-\x, {\x*sin(1/\x r)});
+\node at (0,0)[below left]{$O$};
+\draw[dashed](2/pi,0)node[below]{$\frac{2}{\pi}$}--(2/pi,2/pi)--(-2/pi,2/pi);
+\end{tikzpicture}
+    \caption{}
+\end{figure}
+
+
+如果把上面的函数$f$加以扩充，即我们定义一个新函数$g$:
+\[g(x)=\begin{cases}
+    x\sin\frac{1}{x},& x\ne 0\\
+    0,& x=0
+\end{cases}\]
+那么我们便得到一个在$x=0$处的连续函数．
+\end{solution}
+
+\begin{blk}
+    {定义3} $\Lim_{x\to a}f(x)$存在，但不等于$f(a)$, 或者$f(a)$没有定义，则称$f$在$a$处有\textbf{可去间断点}。
+\end{blk}
+
+例1.16中的$x=0$就是$f$的可去间断点．
+
+由函数在某一点连续的概念可以直接导出连续函数的一个重要性质如下：
+
+\begin{blk}
+{定理} 若函数$f(x)$在$x=a$连续，且$f(a)>0$, 则存在一个$a$的$\delta$邻域$(a-\delta,a+\delta)$, 使得对于每一个$x\in (a-\delta,a+\delta)$, $f(x)$都是正的．    
+\end{blk}
+
+\begin{proof}
+    因为$\Lim_{x\to a} f(x)=f(a)>0$, 所以对于
+$\varepsilon=\frac{1}{2}f(a)$, 必定存在一个$\delta$使得$|x-a|<\delta$时，有
+\[f (x) > f (a) -\frac{1}{2}f (a) =\frac{1}{2}f (a) > 0\]
+\end{proof}
+
+\subsection{连续函数的运算}
+连续函数的概念是函数概念和极限概念一个自然结合，由本章函数极限算法定理直接得出下面定理。
+
+\begin{blk}
+ {定理1} 设$f$和$g$在$a$处连续，则
+ \begin{enumerate}
+     \item $f\pm g$在$a$处连续；
+     \item $f\cdot g$在$a$处连续；
+     \item $\frac{1}{g}$在$a$处连续（若$g(a)\ne 0$）；
+     \item $\sqrt[n]{f}$在$a$处连续（若$f(a)>0$）。
+ \end{enumerate}
+\end{blk}
+
+\begin{proof}
+\begin{enumerate}
+    \item 因为$f$和$g$在$a$处连续，所以
+    \[\Lim_{x\to a} f (x) =f (a) ,\qquad  \lim_{x\to a} g (x) =g (a)\]
+    根据函数极限算法定理，得
+   \[\begin{split}
+    \Lim_{x\to a} (f\pm g)(x)=\Lim_{x\to a}[f(x)\pm g(x)]&=\Lim_{x\to a} f(x)\pm \Lim_{x\to a}g(x)\\
+    &=f(a)\pm g(a)=(f\pm g)(a)
+   \end{split} \]
+    这正好就是断言$f+g$在$a$处连续．
+    \item \[\begin{split}
+        \Lim_{x\to a} (f\cdot g) (x)=\Lim_{x\to a}f(x)\cdot g(x)&=\Lim_{x\to a} f(x)\cdot\Lim_{x\to a}g (x)\\
+        &=f (a) \cdot g (a) =(f\cdot g) (a) 
+    \end{split}\]
+    即$f\cdot g$在$a$处连续。
+    \item 由于$g(a)\ne 0$, 又$g$在$a$处连续，根据定理，知道存在点$a$的$\delta$邻域，使得对于每一个$x\in (a-\delta,a+\delta)$，有$g(x)\cdot g(a)>0$，因此
+\[\Lim_{x\to a} \frac{1}{g}(x)=\frac{1}{\Lim_{x\to a} g(x)}=\frac{1}{g(a)}=\frac{1}{g}(a)\]
+
+\item 证明留给读者。
+\end{enumerate} 
+\end{proof}
+
+在第四册下，我们根据定理证明了一些基本初等函数在其定义域上到处连续的命题，现在总结如下：
+
+\begin{blk}
+   {命题1} 任何多项式函数到处连续． 
+\end{blk}
+
+\begin{blk}{命题2}
+    若$f$和$g$是两个多项式，$g\ne 0$, 那么有理函数$r=f/g$, 除去$g$的零点集合，函数$r$是有定义的，而且在其定义域上到处连续。
+\end{blk}
+
+\begin{blk}
+   {命题3} $n$次算术方根函数$\sqrt[n]{x}$在$[0,+\infty)$上到处连续。
+\end{blk}
+
+因为每一个无理数可以用两串有理数数列从左、右两方面去逼近它，同样无理指数幂也可以用相应的有理指数幂去逼近它，我们用逼近法定义了无理指数幂，从而把有理指数函数开拓为在实数域上到处连续的实指数函数，于是得到下面的命题。 
+
+\begin{blk}
+    {命题4} 指数函数$a^x\; (a>0,\; a\ne 1)$到处连续．
+\end{blk}
+
+由反函数连续定理，直接得到
+
+\begin{blk}
+    {命题5} 对数函数$\log_a x$在$(0,+\infty)$上到处连续．
+\end{blk}
+
+现在将继续证明另外一些基本初等函数连续性的命题。
+
+\begin{blk}
+    {命题6} 三角函数$\sin x$和$\cos x$到处连续．
+\end{blk}
+
+\begin{proof}
+设$x_0$是任意给定的实数，由三角函数的和差化积公式，得到
+\[|\sin x-\sin x_0|=2\left|\sin\frac{x-x_0}{2}\right| \cdot \left|\cos \frac{x+x_0}{2}\right|\]
+因为$\left|\cos\frac{x+x_0}{2}\right|\le 1$, 并根据引理得到
+\[|\sin x-\sin x_0|\le 2\left|\frac{x-x_0}{2}\right|\]
+即
+\[|\sin x-\sin x_0|\le \left|x-x_0\right|\]
+当$x\to x_0$时，$|x-x_0|\to 0$, 从而$|\sin x-\sin x_0|\to 0$, 即
+\[\lim_{x\to x_0} \sin x=\sin x_0\]
+因为$x_0$是任意一点，所以$\sin x$到处连续。
+
+同样证明，得到：当$x\to x_0$时，
+\[|\cos x-\cos x_0|\le |x-x_0|\to 0\]
+即
+\[\lim_{x\to x_0} \cos x=\cos x_0\]
+因此，$\cos x$到处连续。
+\end{proof}
+ 
+由反函数连续性定理直接得出下面命题。
+
+\begin{blk}
+    {命题7} 反三角函数$y=\arcsin x\; \left(-\frac{\pi}{2}\le x\le \frac{\pi}{2}\right)$,\quad $y=\arccos x\; \left(0\le x\le \pi\right)$,\quad $y=\arctan x\; \left(-\frac{\pi}{2}< x< \frac{\pi}{2}\right)$,\quad $y=\arccot x\; \left(0<x<\pi\right)$在它们各自的定义域上到处连续。
+\end{blk}
+
+\begin{blk}{命题8}
+幂函数$x^{\alpha}$（$\alpha$是任何一个实数）在开区间$(0,+\infty)$上到处连续。
+\end{blk}
+
+\begin{proof}
+为确定起见，假设$\alpha>0$, $n$是任何一个大于$\alpha$的整数
+\[(x+h)^{\alpha} -x^{\alpha}=x^{\alpha} \left[ \left(1+\frac{h}{x}\right)^{\alpha} -1\right] \]
+
+若$h>0$, 则$\left(1+\frac{h}{x}\right)^{\alpha} >1$，（实指数幂性质），并且
+\begin{equation}
+    1<\left(1+\frac{h}{x}\right)^{\alpha}<\left(1+\frac{h}{x}\right)^{n}\quad \text{(指数函数单调性)}
+\end{equation}
+
+若$h<0$, 将上面不等式方向反向，得到
+\begin{equation}
+    \left(1+\frac{h}{x}\right)^{n}<\left(1+\frac{h}{x}\right)^{\alpha}<1
+\end{equation}
+因为$\left(1+\frac{h}{x}\right)^{n}$是关于$h$的$n$次多项式，并且显然当$h\to 0$时，
+\[\left(1+\frac{h}{x}\right)^{n}\to 1\]
+
+于是，由不等式(1.10)和(1.11), 得到当$h\to 0$时，$\left(1+\frac{h}{x}\right)^{n}\to 1$. 因此
+\[\lim_{h\to 0}\left[(x+h)^{\alpha}-x^{\alpha}\right]=0\]
+即：
+\[\lim_{h\to 0}(x+h)^{\alpha}=x^{\alpha}\]
+这就是说$x^{\alpha}$在$(0,+\infty)$上处处连续。
+\end{proof}
+
+下面介绍常用的复合函数连续性定理。
+\begin{blk}
+{定理2} 设$X$、$Y$、$Z$是实数集，函数$g:\,X\mapsto Y$, $f:\, g(X)(\subset Y)\mapsto Z$, 又$h:\, X\mapsto Z$定义为$f$和$g$的复合函数，即$h(x)=f (g (x) )\;  (x\in X)$.
+
+若$y=g(x)$在$x=a$处连续；$z=f(y)$在$y=g(a)=b$处连续，那么复合函数$z=h(x)=f(g(x))$在点$a$处也连续。
+\end{blk}
+
+\begin{proof}
+由于
+\begin{equation}
+    \lim_{x\to a} g(x)=g(a)=b,\qquad x\in X
+\end{equation}    
+又因为：
+\begin{equation}
+    \lim_{y\to b} f(y)=f(b),\qquad y\in g(X)\subset Y
+\end{equation}
+
+$\therefore\quad \Lim_{x\to a}h(x)=\Lim_{x\to a}f(g(x))=\Lim_{y\to b}f(y)=f(b)=f(g(a))=h(a)$
+
+这就说明复合函数在点$a$的连续性。
+\end{proof}
+
+把上面的等式写成
+\[\lim_{x\to a}f (g (x) ) =f (g (a) ) =f \left(\lim_{x\to a} g(x) \right)\]
+这个等式表示可以这样求复合函数的极限$\Lim_{x\to a}f(g(x))$, 
+如果内层函数$g(x)$在点$a$的极限存在，即$\Lim_{x\to a}g(x)=b$, 
+而且$f$在点$b$连续，就可以把极限符号$\Lim_{x\to a}$与函数符号$f$互换，
+也就是把极限运算移到内层函数上去施行。
+
+\begin{example}
+    说明$h(x)=\sqrt[4]{\frac{1}{1+x^2}}$到处连续，并求$\Lim_{x\to a}h(x)$
+\end{example}
+
+\begin{solution}
+    $h(x)=\sqrt[4]{\frac{1}{1+x^2}}$可以看作$y=g(x)=\frac{1}{1+x^2},\; x\in\mathbb{R}$
+和$z=f(y)=\sqrt[4]{y},\; y\in [0,+\infty)$的复合函数。
+
+由于$g(x)=\frac{1}{1+x^2}$在$\mathbb{R}$上到处连续并且它的值域
+\[g(\mathbb{R})=(0,1]\subset [0,+\infty)=Y\]
+又幂函数$f(y)=\sqrt[4]{y}$在$Y=[0,+\infty)$上到处连续，因此$f(y)=\sqrt[4]{y}$在$g(\mathbb{R})=(0,1]$上也到处连续，于是
+\[\lim_{x\to a}h(x)=h\left(\lim_{x\to a}g(x)\right)=\sqrt[4]{\frac{1}{1+a^2}}\]
 \end{solution}
 
 
 \begin{example}
-    
+    求$\Lim_{x\to 2}\sqrt{\frac{1-\cos\pi x}{4-x^2}}$
 \end{example}
 
 \begin{solution}
-    
+设$y=g(x)=\frac{1-\cos\pi x}{4-x^2}\; (x\ne \pm 2)$，$z=f(y)=\sqrt{y}\; (y\ge 0)$，且知$f$在$[0,+\infty)$上到处连续，于是
+\[f(g(x))=\sqrt{\frac{1-\cos\pi x}{4-x^2}}\]
+因此：
+\[\begin{split}
+    \lim_{x\to 2}g(x)&=\lim_{x\to 2}\frac{1-\cos \pi x}{4-x^2}\\
+    &=\lim_{x\to 2}\frac{2\sin^2\frac{\pi}{2}x}{4-x^2}=\lim_{x\to 2}\frac{\pi\sin^2\frac{\pi}{2}(2-x)}{\frac{\pi}{2}(2-x)(2+x)}\\
+    &=\lim_{x\to 2}\left[\frac{\sin\frac{\pi}{2}(2-x)}{\frac{\pi}{2}(2-x)}\cdot \frac{1}{2+x}\cdot \sin\frac{\pi}{2}(2-x)  \right]\\
+    &=1\cdot \frac{1}{4}\cdot 0=0\in [0,+\infty)
+\end{split}\]
+
+$\therefore\quad \Lim_{x\to 2}\sqrt{\frac{1-\cos\pi x}{4-x^2}}=\sqrt{\Lim_{x\to 2}\left(\frac{1-\cos\pi x}{4-x^2}\right)}=\sqrt{0}=0$
 \end{solution}
 
 \begin{example}
-    
+    求$\Lim_{x\to 0}\frac{\arcsin x}{x}$
 \end{example}
 
 \begin{solution}
-    
+设$\alpha=\arcsin x$，这里$-1\le x\le 1$，$-\frac{\pi}{2}\le\alpha\le \frac{\pi}{2}$，
+于是，$\sin\alpha=x$。
+
+根据反正弦函数的连续性，有
+\[\lim_{x\to 0} \alpha=\lim_{x\to 0}\arcsin x=\arcsin 0=0\]
+进行变量替换，得到
+\[\lim_{x\to 0} \frac{\arcsin x}{x}=\lim_{x\to 0}\frac{\alpha}{\sin\alpha}=1\]
 \end{solution}
 
-\begin{solution}
+下面根据指数函数与对数函数的连续性，我们要建立几个重要的极限：
+\begin{enumerate}
+    \item $\Lim_{x\to 0} \frac{\ln(1+x)}{x}=1$,\quad 这里$\ln$表示$\log_e$
+    \item $\Lim_{x\to 0}\frac{e^x-1}{x}=1$
+    \item $\Lim_{x\to 0}\frac{(1+x)^\alpha -1}{x}=\alpha$
+\end{enumerate}
+
+\begin{proof}
+\begin{enumerate}
+    \item $\Lim_{x\to 0} \frac{\ln(1+x)}{x}=\Lim_{x\to 0} \ln(1+x)^{1/x}$
+    因为右端在对数号下的式子当$x\to 0$趋向于$e$, 所以根据对数函数的连续性，得到
+\[\Lim_{x\to 0} \frac{\ln(1+x)}{x}=\Lim_{x\to 0} \ln(1+x)^{1/x}=\ln e=1\]
+\item 令$e^x-1=y$, 于是当$x\to 0$时，由指数函数连续性有$y\to 0$, 其次，我们有$x=\ln(1+y)$, 因此，有
+\[\Lim_{x\to 0}\frac{e^x-1}{x}=\Lim_{y\to 0}\frac{y}{\ln(1+y)}=\Lim_{y\to 0}\frac{1}{\ln(1+y)^{1/y}}=1\]
+\item 我们令$(1+x)^{\alpha}-1=y$, 当$x\to 0$时，由幂函数的连续性，也有$y\to 0$, 在等式$(1+x)^{\alpha}=1+y$的两边取对数得到
+\[\alpha\ln (1+x) =\ln (1+y) \]
+利用这一关系式，我们把所给的表达式变形为
+\[\frac{(1+x)^\alpha-1}{x}=\frac{y}{x}=\frac{y}{\ln(1+y)}\cdot \alpha\cdot\frac{\ln(1+x)}{x}\]
+因此：
+\[\Lim_{x\to 0} \frac{(1+x)^\alpha-1}{x}=   \Lim_{x\to 0} \frac{y}{\ln(1+y)}\cdot \alpha\cdot   \Lim_{x\to 0}  \frac{\ln(1+x)}{x}=\alpha\]
+\end{enumerate}
+\end{proof}
+
+我们讨论了下面的函数：
+\begin{enumerate}
+    \item $f(x)=c$\quad （$c$为常数）
+    \item $x^n$\quad（$n$是整数）
+    \item $\sqrt[n]{x}\quad (x\ge 0)$
+    \item $a^n\quad (a>0,\; n\ne 1)$
+    \item $\log_a x$
+    \item $x^\alpha$\quad （$\alpha$是任意实常数）
+    \item $\sin x,\; \cos x, \; \tan x,\; \cot x$
+    \item $\arcsin x,\; \arccos x, \; \arctan x,\; \arccot x$
+\end{enumerate}
+上面这些函数统称为\textbf{基本初等函数}。
+
+凡是由基本初等函数及常数，经过有限次四则运算（加、减、乘、除）及有限次函数复合的步骤而得到的且由一个式子表示的函数，及可以化为这种形式的函数，统称为\textbf{初等函数}。
+
+例如，下列函数都是初等函数：
+\begin{enumerate}
+    \item $f(x)=x\sin\frac{1}{x}+2^x\log_2 x$
+    \item $\varphi(x)=\arctan\frac{1}{x}+\sin(x^2+1)$
+\end{enumerate}
+
+连续函数的四则运算定理，复合函数连续性定理及反函数连续性定理，在研究初等函数的连续性时具有重要作用。现在根据这些定理，立即得到一个重要结论：
+
+\begin{blk}
+ {定理} 一切初等函数在它有定义的任何区间内到处连续。
+\end{blk}
+
+\begin{ex}
+\begin{enumerate}
+    \item 试证 $y=|x|$是一个到处连续的函数。
+    \item 说明下列函数到处连续：
+\begin{multicols}{2}
+\begin{enumerate}
+    \item $f(x)=\frac{x^2}{1+x^2}$
+    \item $f(x)=\sin|x|$
+    \item $\varphi(x)=|\sin x|$
+    \item $k(x)=\left\{\cos x-\sin|x|\right\}^3$
+\end{enumerate}
+\end{multicols}
+
+\item 求出下列函数的间断点，并指出其类型。
+\begin{multicols}{2}
+\begin{enumerate}
+    \item $f(x)=\frac{1}{x-2}$
+    \item $f(x)=\frac{x-1}{x^2-1}$
+    \item $h(x)=x\cos^2 \frac{1}{x}$
+    \item $y=\frac{1}{\sin\pi x}$
+    \item $y=\tan(x-1)$
+    \item $y=\frac{\sin x}{|x|}$
+    \item $f(x)=\begin{cases}
+        \frac{\sin x}{|x|},&x\ne 0\\
+        1,& x=0
+    \end{cases}$
+    \item $f(x)=\cot\frac{1}{x}$
+    \item $f(y)=\begin{cases}
+        \cos\frac{\pi x}{2},& |x|\le 1\\
+        |x-1|,& |x|>1
+    \end{cases}$
+\end{enumerate}
+\end{multicols}
+\item 试证明下列函数在其定义域内是连续的：
+\begin{enumerate}
+    \item $f(x)=\begin{cases}
+        x^2\sin\frac{1}{x},&x\ne 0\\
+        0,&x=0
+    \end{cases}$
+    \item $\varphi(x)=\begin{cases}
+        1-x,& x<0\\
+        2x^2+1,& x=0\\
+        2+(x-1)^3,& x>0
+    \end{cases}$
+\end{enumerate}
+\item 求下列变量的极限：
+\begin{multicols}{2}
+    \begin{enumerate}
+\item $\Lim_{x\to+\infty}\left(\sin\sqrt{x+1}-\sin\sqrt{x}\right)$
+\item $\Lim_{x\to 1}\frac{1+\cos\pi x}{\tan^2 \pi x}$
+\item $\Lim_{x\to 0}\frac{x\sin x}{1-\cos x}$
+\item $\Lim_{x\to 0}\frac{x}{\sqrt{1-\cos x}}$
+\item $\Lim_{x\to 0}\frac{\cos x-\cos 3x}{x^2}$
+\item $\Lim_{x\to \tfrac{\pi}{4}}\tan 2x\tan\left(\frac{\pi}{4}-x\right)$
+\item $\Lim_{h\to 0}\frac{\arctan (x+h)-\arctan x}{h}$
+\item $\Lim_{x\to \infty}\arcsin \frac{1-x}{1+x}$
+\item $\Lim_{x\to 0}\frac{1+\sin x-\cos x}{1+\sin px-\cos px}$
+\item $\Lim_{x\to 0}\frac{\log_p(1+x)}{x}$
+\item $\Lim_{x\to 0}\frac{a^x-1}{x}$
+\item $\Lim_{n\to \infty}n\left(\sqrt[n]{x}-1\right)$
+    \end{enumerate}
+\end{multicols}
+\end{enumerate}
+\end{ex}
+
+\subsection{闭区间上的连续函数的性质}
+
+我们在一中已经定义了闭区间上连续函数的意义．对于这类函数，我们要介绍它的几个重要性质。
+
+\begin{blk}
+    {中间值定理} 设$y=f(x)$是一个在闭区间$[a,b]$上到处连续的函数，设$c$是一个介于$f(a)$和$f(b)$之间的常数，则必须存在一个介于$a$、$b$之间的实数$x_0$, 使得$f(x_0)=c$.
+\end{blk}
+
+用几何术语来说，$y=f(x),\; a\le x\le b$的图象是一条连结$P(a,f(a))$点和$Q(b,f(b))$点的连续曲线，而$P$、$Q$分居于直线$y=c$的两侧，则曲线$y=f(x),\; a\le x\le b$至少和直线$y=c$有一个交点（$x_0,\; f(x_0)=c$）。(图1.14).
+\begin{figure}[htp]
+    \centering
+\begin{tikzpicture}
     
-\end{solution}
-
-
-
-
-
-
-\begin{solution}
-    
-\end{solution}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\end{tikzpicture}
+    \caption{}
+\end{figure}
+
+
+对这个定理，我们在第四册中利用二分逼近法及连续函数的性质给出了它的证明，这里不再重述。
+
+\begin{blk}
+ {最大值、最小值} 在闭区间$[a,b]$上连续的函数$f$一定在该区间上取到一个最大值和最小值。  
+\end{blk}
+
+我们先利用连续函数的图象来直观地说明这个性质，然
+后用证明中间值定理的同样方法来证明这个定理。初学者可略过定理的证明，这不影响对本书后面内容的学习。
+
+从图1.15可以看出，在$[a,b]$中，能够找到两点$x_1,x_2$使$f(x_1)=M$, $f(x_2)=m$, 而对于$[a,b]$中所有的$x$, 都有
+\[m=f(x_2)\le f(x)\le f(x_1)=M\]
+
+\begin{rmk}
+    这个定理是假定$f$在整个闭区间上连续，如果在一点不连续，则定理的结论就可能不成立。
+\end{rmk}
+
+例如，函数$f(x)=x-[x]$, $x\in [0, 1]$在$x=1$这一点不连续，它的图象如图1.16, 我们要说明它有最小值0, 而无最大值．
+
+事实上，$f$是分段函数：
+\[f(x)=\begin{cases}
+    x,& 0\le x<1\\
+    0,& x=1
+\end{cases}\]
+$f$在$[0, 1)$上递增，故
+$f(0)=f(1)=0$最小．又在$[0, 1]$上没有一点的函数值为1, 但是对于任何一个小于1的正数$k$, 恒有
+\[f (k) =k- [k] =k<1\]
+这就说明了$f$在$[0, 1]$上有上界1, 但始终达不到1, 现在我们进一步说明1是它的最小上界，假设定数$k'<1$是$f$在
+$[0, 1]$上的上界，我们在$(k',1)$内任意取一个数$x$, 于是
+\[f (x) =x- [x] =x> k'\]
+这与假设$k'$是$f$在$[0, 1]$上的上界矛盾，因此1是$f$在$[0, 1]$上的最小上界，但是它不属于$f$的值域，这就说明了$f$无最大值。
+
+从这个例中还可以看出，定理中的闭区间不能用开区间来代替。
+
+现在给出定理的证明如下：
+
+\begin{proof}
+令$A_1=a$, $B_1=b$, $S_1=\{f(x)|x\in [a,b]\}$，设$K$是$S_1$的最小上界，记$K=l.u.b\{S_1\}$. 再令
+\[S_1'=\left\{f (x) ; \; x\in \left[a,\frac{a+b}{2}\right]\right\},\quad S_1''=\left\{f(x);\; x\in\left[\frac{a+b}{2},b\right]\right\}\]
+显然有：
+\[S_1=S_1'\cup S_1''\]
+由此不难看到：
+\[K=l.u.b \{S_1\} =\max \left(l.u,b \{S'_1\} ,l.u.b\{S_1''\}\right)\]
+所以$l.u.b\{S_1'\}$和$l.u.b\{S_1''\}$两者之中，至少有一个等于$K$, 换句话说，我们总可以在$[A_1,B_1]$的两个半段之中，选取其一为$[A_2,B_2]$, 使得
+\[l.u.b \{S_2\} =K,\qquad  S_2= \{f (x) ,\; x\in [A_2, B_2] \}\] 
+如此逐步二分，每次由$[A_{n} ,B_{n}]$归纳地选取其半段作为$[A_{n+1} ,B_{n+1}]$，使得
+\[\begin{split}
+    l.u.b \{f (x) ;\; x\in  [A_{n+1}, B_{n+1}] \}&=l.u.b \{f (x) ;\; x\in [A_n, B_n] \}\\
+&=\cdots\\
+&=l.u.b \{f (x) ;\; x\in  [a,b] \}=K.
+\end{split}\]
+对$\{A_n\},\{B_n \}$, 根据实数的连续性，知存在$c$使得$c\in ［A_n,B_n]$, $n=1, 2, 3,\ldots$, 且$B_n-A_n\to 0$.
+
+现在我们要再利用$f(x)$到处连续这一性质，说明$f(c)＝K$. 假若不然，即$f(c)<K$，则可以取$\varepsilon=\frac{1}{2}(K-f(c))>0$，然后利用$f(x)$在$c$点的连续性，知存在点$c$的$\delta$邻域，使得当$|x-c|<\delta$时，有
+\[|f(x)-f(c)|<\varepsilon\]
+即：
+\[\begin{split}
+    f(x)<f(c)+\varepsilon&=f(c)+\frac{1}{2}K-\frac{1}{2}f(c)\\
+    &=\frac{1}{2}[K+f(c)]\\
+    &=\frac{1}{2}[K+K-2\varepsilon]=K-\varepsilon
+\end{split}\]
+所以
+\[l.u.b \{f (x) ;\; x\in  (c-\delta,c+\delta) \} \le K-\varepsilon\]
+但是，由$\Lim_{n\to\infty} A_n=\Lim_{n\to\infty}B_n=c$, 知当$n$足够大时，有
+\[[A_n,B_n]\subset (c-\delta,c+\delta)\]
+这显然和$[A_n,B_n]$的选取法，亦即保持
+\[l.u.b \{f (x) ;\; x\in [A_n,B_n]\}=K\]
+相矛盾，因此，$f(c)$必须等于$K$. 
+
+类似地，可以证明存在使函数$f$达到它的最小值的一个点。
+\end{proof}
+
+\subsection*{习题1.2}
+\begin{enumerate}
+    \item 求下列函数的极限：
+\begin{enumerate}\begin{multicols}{2}
+    \item $\Lim_{x\to 0}(\cos x)^{\sin x}$
+    \item $\Lim_{x\to 0}\frac{\frac{x^2}{e^{2x}}}{\ln\left(1+\frac{x^2}{e^{2x}}\right)}$
+    \item $\Lim_{x\to 0}\frac{\frac{x^2}{e^{2x}}}{\sin^2 \frac{x}{e^{x}}}$
+    \item $\Lim_{x\to \infty}n^2\left(-x^{\tfrac{1}{n}}-x^{\tfrac{1}{n+1}}\right)$
+    \item $\Lim_{x\to 0}\frac{\left(e^x+e^{-x}\right)\left(e^x-e^{-x}\right)}{2x}$
+    \item $\Lim_{x\to 0}(1-2x)^{\tfrac{1}{x}}$
+    \item $\Lim_{x\to \infty}10\left(1+\frac{0.03}{n}\right)^n$
+    \item $\Lim_{x\to +\infty}\arccos\left(\sqrt{x^2+x}-x\right)$
+    \item $\Lim_{x\to -\infty}\arctan\frac{x-4}{(x-2)^2}$
+    \item $\Lim_{x\to -\infty}\arctan\frac{x}{\sqrt{1+x^2}}$
+    \item $\Lim_{x\to -\infty}\frac{x}{\sqrt{1+x^2}}$
+\end{multicols}   
+    \item $\Lim_{x\to 0}\frac{\ln\frac{1+x}{1-x}}{\arctan(1+x)-\arctan(1-x)}$
+\end{enumerate} 
+
+\item 在一个以弦$AB$为界的弓形中，把点$A$与$B$与弧$\wideparen{AB}$的中点$C$用直线连结起来，于是得到一个等腰三角形$\triangle  ABC$, 再在$A$与$B$作切线，它们交于$D$, 试计算$\Lim_{x\to 0}\frac{\triangle ABC}{\triangle ABD}$，其中$x$是
+弦$AB$所对应的中心角。
+
+\item $f(x)=\frac{ax^3+bx^2+cx+d}{x^2-x-2}$满足条件
+\[\lim_{x\to \infty} f(x)=2,\qquad \lim_{x\to 2} f(x)=3\]
+求$f(x)$.
+\end{enumerate}
 
